# pharia-skill-cli

./: .env.example  .release-plz.toml  CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/actions/jfrog/: action.yml
.github/workflows/: cargo-login.yml  ci.yml  publish.yml  release-plz.yml  release.yml  test.yml
skills/: greet-skill.wasm
src/: main.rs
tests/: integration.rs
