[package]
name = "pharia-skill-cli"
version = "0.3.2"
edition = "2021"
repository = "https://github.com/Aleph-Alpha/pharia-skill-cli"

[dependencies]
clap = { version = "4.5.30", features = ["env", "derive"] }
mime = "0.3.17"
oci-client = { version = "0.14.0", features = ["rustls-tls"] }
oci-wasm = { version = "0.2.1", features = ["rustls-tls"] }
reqwest = { version = "0.12.12", features = [
    "brotli",
    "deflate",
    "gzip",
    "json",
    "rustls-tls",
    "zstd",
] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }

[dev-dependencies]
assert_cmd = "2.0.16"
dotenvy = "0.15.7"
predicates = "3.1.3"
wat = "1.225.0"
pharia-kernel = { registry = "jfrog", version = "0.9.3" }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
