[package]
name = "pharia-skill-cli"
version = "0.3.3"
edition = "2021"
repository = "https://github.com/Aleph-Alpha/pharia-skill-cli"

[dependencies]
clap = { version = "4.5.32", features = ["env", "derive"] }
mime = "0.3.17"
oci-client = { version = "0.14.0", features = ["rustls-tls"] }
oci-wasm = { version = "0.2.1", features = ["rustls-tls"] }
reqwest = { version = "0.12.15", features = [
    "brotli",
    "deflate",
    "gzip",
    "json",
    "rustls-tls",
    "zstd",
] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }

[dev-dependencies]
assert_cmd = "2.0.16"
dotenvy = "0.15.7"
predicates = "3.1.3"
wat = "1.227.1"
pharia-kernel = { registry = "jfrog", version = "0.11.5" }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
