[package]
name = "pharia-skill-cli"
version = "0.4.1"
edition = "2021"
repository = "https://github.com/Aleph-Alpha/pharia-skill-cli"

[dependencies]
clap = { version = "4.5.32", features = ["env", "derive"] }
oci-client = { version = "0.14.0", features = ["rustls-tls"] }
oci-wasm = { version = "0.2.1", features = ["rustls-tls"] }
tokio = { version = "1.44.1", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }

[dev-dependencies]
assert_cmd = "2.0.16"
dotenvy = "0.15.7"
wat = "1.227.1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
